# rust-website-actix

./: Cargo.toml  Makefile  README.md  docker-compose.yaml
client/: Dockerfile  dev.dockerfile  package-lock.json  package.json
client/src/: App.tsx
nginx/: Dockerfile  nginx.conf
server/: .dockerignore  Cargo.toml  Dockerfile  dev.dockerfile
server/src/: main.rs
src/: main.rs
static/: 404.html  welcome.html
