[package]
name = "first-actix"
version = "0.1.0"
authors = ["aurelien <aurelien.dentan@gmaiL.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"
actix-session = "0.1.0"
listenfd = "0.3"
actix-cors = "0.1.0"

futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"